src/app/shared/cards/challenge-card/challenge-card.component.scss
.mat-card {
  position: relative;
  display: flex;
  flex-direction: column;
  height: 11.5em;
  margin-bottom: 20px;
  padding: 2em 1.5em 0.5em;
  transition: 0.2s;
  transition-property: box-shadow;

  &:hover,
  &:focus {
    box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18),
      0 4px 15px 0 rgba(0, 0, 0, 0.15);
  }
}

.mat-card-header {
  height: 2em;
  margin-left: -16px;
  margin-bottom: 0.5em;

  .mat-card-title {
    font-size: 2em;
  }

  .mat-icon {
    font-size: 2em;

    &.rocc-challenge-favorite-icon {
      color: #f1d07e;
    }
  }
}

.rocc-challenge-topics-container {
  display: inline-flex;
  margin-bottom: 0.5em;

  a {
    margin-right: 8px;
    color: #8e92de; // #e55a17
    font-size: 1em;
    text-decoration: none;

    &:hover {
      text-decoration: underline;
      cursor: pointer;
    }
  }
}

.mat-card-content {
  display: grid;
  grid-template-columns: 3.5fr 1fr;
  grid-gap: 2em;
  align-items: center;
  height: 100%;
  font-size: 1.2em;

  .rocc-challenge-left-content-container {
    justify-self: left;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    height: 100%;

    .rocc-challenge-descriptions {
      display: flex;
      flex-direction: column;
      justify-content: center;
      height: 100%;
      margin-bottom: 0.5em;
    }

    .rocc-challenge-stats-container {
      display: flex;
      margin-top: auto;

      div {
        display: inline-flex;
        align-items: center;

        strong {
          margin-left: 5px;
          margin-right: 10px;
        }
      }
    }
  }

  .rocc-challenge-dates-container {
    justify-self: right;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    width: 100%;
    height: 100%;
    min-height: 4em;
    text-align: right;

    span {
      margin-top: 5px;
    }

    b {
      text-align: right;
      padding-right: 10px;
    }
  }
}

.rocc-challenge-active {
  color: green;
}

.rocc-challenge-upcoming {
  color: yellow;
}

.rocc-challenge-completed {
  color: grey;
}

.rocc-challenge-platform-logo {
  position: absolute;
  right: 1.5em;
  top: 2em;
  height: 4em;
  width: 4em;
  z-index: 2;
}

